// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup using mount 1`] = `
<styled.div>
  <div
    className="sc-bwzfXH jIEWCi"
  >
    <styled.button
      className="class"
      onClick={[Function]}
      type="button"
    >
      <button
        className="class sc-bdVaJa ihDGdR"
        onClick={[Function]}
        type="button"
      >
        <strong>
          1
        </strong>
      </button>
    </styled.button>
    <styled.button
      className="class"
      onClick={[Function]}
      type="button"
    >
      <button
        className="class sc-bdVaJa ihDGdR"
        onClick={[Function]}
        type="button"
      >
        <strong>
          2
        </strong>
      </button>
    </styled.button>
  </div>
</styled.div>
`;

exports[`ButtonGroup using react-test-renderer 1`] = `
<div
  className="sc-bwzfXH jIEWCi"
>
  <button
    className="class sc-bdVaJa ihDGdR"
    onClick={[Function]}
    type="button"
  >
    <strong>
      1
    </strong>
  </button>
  <button
    className="class sc-bdVaJa ihDGdR"
    onClick={[Function]}
    type="button"
  >
    <strong>
      2
    </strong>
  </button>
</div>
`;

exports[`ButtonGroup using render 1`] = `
<div
  class="sc-bwzfXH jIEWCi"
>
  <button
    class="class sc-bdVaJa ihDGdR"
    type="button"
  >
    <strong>
      1
    </strong>
  </button>
  <button
    class="class sc-bdVaJa ihDGdR"
    type="button"
  >
    <strong>
      2
    </strong>
  </button>
</div>
`;

exports[`ButtonGroup using shallow 1`] = `
<styled.div>
  <Button
    className="class"
    key="1"
    onClick={[Function]}
  >
    <strong>
      1
    </strong>
  </Button>
  <Button
    className="class"
    key="2"
    onClick={[Function]}
  >
    <strong>
      2
    </strong>
  </Button>
</styled.div>
`;
